# data_security

./: .gitignore  AGENTS.md  Dockerfile  PHASE6_INTEGRATION.md  Project Proposal.md  README.md  README_TEST.md  TEAM_SETUP_GUIDE.md  combined_docs.txt  docker-compose.yml  presentation.md  project-initial.md  report.tex  test_pyi.sh  vget.spec
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-34e525835b9efb903c1931896693300c2562f098f27d0c3eb2369b7e1df43239.json  query-489be0b5c0fd5f879c063725c49a55b5533e1eba57a58e5aa4bac918999ec203.json  query-9607d493f84839604bdb5b61d1304f7702939774c5038f455547eebcb641dd98.json  query-9d03f7c86173580ba369f21e43a54e55004faf42a8e0c593142e245e4c1dd4d2.json  query-c47cd781f4bcb3c15cb4be3a0a7f886ea6946c8c9402aa4da6c5d3f522c18574.json  query-ccef693e6b3638bce8cd98a3314d8f2ec9977320981780f7ad6a74c4346e156d.json
backend/alembic/: env.py
backend/alembic/versions/: eb60bb1a7502_store_package_bytes_in_database.py
backend/api/: app.py
backend/core/: security.py
backend/db/: database.py
backend/migrations/: 20260406064622_init.sql
backend/src/: main.rs
backend/src/handlers/: developer.rs  package.rs  user.rs
backend/tests/: test_api.py  test_database.py  test_security.py
cli/: Cargo.toml  main.py
cli/src/: main.rs
ml_scanner/: decision_engine.py  requirements.txt
other memeber work/: label_report.txt  main.py  requirements.txt  risk_engine.py  train_classifier.py
python_backend/: Dockerfile
python_cli/: main.py
scripts/: phase6_integration.sh
test/: E2E_TESTING_GUIDE.md  backend_deployment.md  dev_testing.md  (+2 more)
(+26 files in other folders)
