[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vget"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2.3"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
color-eyre = "0.6"
dialoguer = "0.11"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
flate2 = "1.0"
tar = "0.4"
rand = "0.8"
semver = "1.0"
dirs = "5"
